<resources>
    <string name="app_name">Paxful</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_jokes_list">Jokes List</string>
    <string name="menu_my_jokes">My Jokes</string>
    <string name="menu_settings">Settings</string>
    <string name="lorem_ipsum">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"</string>
    <string name="share">Share</string>
    <string name="like">Like</string>
    <string name="share_joke_title">Check this out</string>
    <string name="delete">Delete</string>
    <string name="hint_first_character_name">Character firstname</string>
    <string name="hint_last_character_name">Character lastname</string>
    <string name="offline_mode">Offline mode</string>
    <string name="add_a_joke">Add new joke</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="your_joke">Input your joke</string>
    <string name="joke_saved">This joke was saved to your favorites</string>
    <string name="empty_text">Sorry, there are no jokes</string>
    <string name="share_exception">Can\'t share joke</string>
</resources>